--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link rel="stylesheet" href="greet.css">
+    <link rel="stylesheet" href="CSS/greet.css">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
 </body>
 
     <!-- Factory Functions -->
-    <script src="greetFF.js" charset="utf-8"></script>
-    <script src="greet.js" charset="utf-8"></script>
+    <script src="Factory Function/greetFF.js" charset="utf-8"></script>
+    <script src="JS/greet.js" charset="utf-8"></script>
 
 </html>
