--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <!-- <div class="welcome" style="font-size: 20px;"><h4>Welcome! To greet, please enter a name and select a language</h4></div> -->
 
             <!-- Error Message space -->
-         <div><h3 class="erroMsg" style="color: brown; font-weight:bold; font-size: 16px; font-family: Arial, Helvetica, sans-serif;"></h3></div>
+         <div>
+             <h3 class="erroMsg" style="color: brown; font-weight:bold; font-size: 16px; font-family: Arial, Helvetica, sans-serif;"></h3>
+             <h3 class="clearMsg" style="color: rgb(12, 97, 97); font-weight:bold; font-size: 16px; font-family: Arial, Helvetica, sans-serif;"></h3>
+        </div>
              
          <div class="second_div">
             <div class="names">
