--- a/Greet-Test/index.html
+++ b/Greet-Test/index.html
@@ -22,7 +22,7 @@
         var assert = chai.assert;
     </script>
 
-    <script src="Greet-Factory Function/greetFF.js" charset="utf-8"></script>
+    <script src="Factory Function/greetFF.js" charset="utf-8"></script>
     <script src="Greet-Test/greeting.test.js" charset="utf-8"></script>
 
     <script>
