--- a/Greet-Test/index.html
+++ b/Greet-Test/index.html
@@ -22,8 +22,8 @@
         var assert = chai.assert;
     </script>
 
-    <script src="Factory Function/greetFF.js" charset="utf-8"></script>
-    <script src="Greet-Test/greeting.test.js" charset="utf-8"></script>
+    <script src="greetFF.js" charset="utf-8"></script>
+    <script src="greeting.test.js" charset="utf-8"></script>
 
     <script>
         // <!-- configure and run mocha -->
