--- a/Greet-Test/index.html
+++ b/Greet-Test/index.html
@@ -23,7 +23,7 @@
     </script>
 
     <script src="/Factory-Function/greetFF.js" charset="utf-8"></script>
-    <script src="greeting.test.js" charset="utf-8"></script>
+    <script src="/Greet-Test/greeting.test.js" charset="utf-8"></script>
 
     <script>
         // <!-- configure and run mocha -->
